# samdul13food

./: .firebaserc  .gitignore  .pdm-python  Dockerfile  README.md  pyproject.toml  vhost.conf
docs/: index.html
src/samdul13food/: main.py
src/samdul13food/data/: food13.csv
