[project]
name = "samdul13food"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "tbongkim03", email = "tbongkim03@gmial.com"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
